[package]
name = "js13k-invaders"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]  # Required for WASM compilation

# Size optimization settings for js13k
[profile.release]
opt-level = "z"          # Optimize for smallest size
lto = true               # Link-time optimization across all crates
codegen-units = 1        # Single codegen unit for better optimization
panic = "abort"          # No unwinding code (~5KB saved)
strip = true             # Strip all symbols

[dependencies]
wee_alloc = "0.4"        # Tiny allocator: ~1KB vs default ~10KB